# meshi-api

./: Cargo.toml  Dockerfile  config_template.yml  docker-compose.yml  makefile
cloudbuild/: deploy.yml
src/: Rocket.toml  main.rs
src/api/: postgre.rs
