[package]
name = "meshi-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
postgrest = "1.0"
serde = "1.0.171"
dotenv = "0.15.0"
actix-web = "4.3.1"
serde_json = "1.0.103"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.2"
features = ["handlebars","tera"]

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
serde = { version = "1.0", features = ["derive"] }
